# STask

./: .gitignore  CMakeLists.txt  README.md
src/: STask.sln
src/STask/: CMakeLists.txt  IOManager.cpp  IOManager.h  Logger.h  Makefile  STUtils.h  STask.cpp  SisyphusUtils.h  UserManager.cpp  UserManager.h
src/STask/test/: STask.cpp
